3_TypeChecking/test/good/good01.cc
void main() {
	int i;
	bool b;
	double d;
	string s;
}