3_TypeChecking/test/bad/bad05.cc
int main() {
  bool i;

  return;
}
